[project]
name = "sample"
version = "0.1.0"
description = ""
authors = [
    {name = "vishnnu-vishnu",email = "vishnumampattakunnath@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"







[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.7"
pytest = "^8.3.4"


[tool.poetry.group.prod.dependencies]
uvicorn = "^0.34.0"

